流地址可以有参数情况下参数传递不全，使用base64加密一下流地址

--- a/converter-flv/src/main/resources/static/video.html
+++ b/converter-flv/src/main/resources/static/video.html
@@ -53,7 +53,7 @@ $(function(){
 				window.v.flvPlayer.unload();
 				window.v.flvPlayer.destroy();
 			}
-			window.v=videoObject.init("video","/api/open?url="+src);
+			window.v=videoObject.init("video","/api/open?url="+window.btoa(src));
 		}	
 	});
 	
