--- a/converter-flv/src/main/resources/static/video.html
+++ b/converter-flv/src/main/resources/static/video.html
@@ -31,7 +31,7 @@ video{
 				var self=this;
 				this.src=src;
 				this.id=id;
-				this.flvPlayer = flvjs.createPlayer({type: 'flv',url:src,isLive: true,hasAudio: false,hasVideo: true,enableStashBuffer: true},{});
+				this.flvPlayer = flvjs.createPlayer({type: 'flv',url:src,isLive: true,enableStashBuffer: true},{});
 				this.flvPlayer.attachMediaElement(document.getElementById(id));
 				this.flvPlayer.load();
 				this.flvPlayer.play();
@@ -53,7 +53,7 @@ $(function(){
 				window.v.flvPlayer.unload();
 				window.v.flvPlayer.destroy();
 			}
-			window.v=videoObject.init("video","/api/open?url="+window.btoa(src));
+			window.v=videoObject.init("video","/live/"+window.btoa(src)+"/live.flv");
 		}	
 	});
 	
