更新部分代码！

--- a/converter-flv/src/main/resources/static/video.html
+++ b/converter-flv/src/main/resources/static/video.html
@@ -21,7 +21,7 @@
 <div class="video-video-div">
     <video id="video" width="100%" height="100%"></video>
 </div>
-<input type="text" id="url" value="rtsp://admin:p@ssw0rd@192.168.1.64/h264/ch33/main/av_stream">
+<input type="text" id="url" value="rtsp://10.19.80.101:9090/dss/monitor/params?cameraid=1000025%248&substream=1">
 <button id="play">play</button>
 </body>
 <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
