--- a/converter-flv/src/main/resources/static/video.html
+++ b/converter-flv/src/main/resources/static/video.html
@@ -20,7 +20,7 @@ video{
 	<div class="video-video-div">
 		<video id="video" width="100%" height="100%"></video>
 	</div>
-	<input type="text" id="url" value="rtsp://admin:p@ssw0rd@192.168.1.64/h264/ch33/main/av_stream">
+	<input type="text" id="url" value="rtsp://admin:p@ssw0rd@192.168.250.60:554/mpeg4">
 	<button id="play">play</button>
 </body>
 <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
@@ -31,7 +31,7 @@ video{
 				var self=this;
 				this.src=src;
 				this.id=id;
-				this.flvPlayer = flvjs.createPlayer({type: 'flv',url:src,isLive: true,enableStashBuffer: true},{});
+				this.flvPlayer = flvjs.createPlayer({type: 'flv',url:src,isLive: true},{isLive: true,enableStashBuffer: false,enableWorker: true,stashInitialSize: 128,videoStateMonitorInterval: 1000,decreaseDurationStep: 1,enableDurationMonitor: true,enableVideoFrozenMonitor: true});
 				this.flvPlayer.attachMediaElement(document.getElementById(id));
 				this.flvPlayer.load();
 				this.flvPlayer.play();
@@ -53,7 +53,7 @@ $(function(){
 				window.v.flvPlayer.unload();
 				window.v.flvPlayer.destroy();
 			}
-			window.v=videoObject.init("video","/live/"+window.btoa(src)+"/live.flv");
+			window.v=videoObject.init("video",window.location.origin+"/live/"+window.btoa(src)+"/live.flv");
 		}	
 	});
 	
